--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
                 <form>
                     <div class="form-group">
                         <label for="employeename">Employee Name</label>
-                        <input type="employee" class="form-control" id="employeeNameInput" placeholder="John Doe">
+                        <input type="employee" class="form-control" id="fullName" placeholder="John Doe">
                         <br>
                         <label for="inputRole">Role</label>
-                        <input type="role" class="form-control" id="inputRole" placeholder="CEO">
+                        <input type="role" class="form-control" id="role" placeholder="CEO">
                     </div>
                     <div class="form-group">
                         <label for="inputStartDate">Start Date MM/DD/YYYY</label>
-                        <input type="role" class="form-control" id="inputStartDate" placeholder="01/08/1989">
+                        <input type="role" class="form-control" id="startDate" placeholder="01/08/1989">
                     </div>
                     <button type="submit" class="submitbttn">Submit</button>
                 </form>
