added <div id="errors"> for error message output, "please input data in format of..."

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                     <button type="submit" class="submitbttn">Submit</button>
                 </form>
             </div>
+            <div id="errors"></div>
             <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase.js"></script>
 </body>
 </html>
