--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <div class="jumbotron jumbotron-fluid">
         <div class="container" style="text-align: center">
@@ -23,12 +18,20 @@
             <p>A Comprehensive Directory of Employee Billable Hours</p>
         </div>
     </div>
+
     <div class='container'>
+        <a href='#add-employee'>
+            <button type="button" class="btn" id='btn-route'>
+                <h5>Add Employee</h5>
+            </button>
+        </a>
+        <br><br>
+
         <div class='row'>
             <div class="col-lg-12">
                 <div class="card">
                     <div class="card-header">
-                        <h5>Current Employees</h5>
+                        <h5>Employees</h5>
                     </div>
                     <div class='card body'>
                         <table class="table">
@@ -42,34 +45,50 @@
                                     <th scope="col">Total Billed ($)</th>
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody id='tableBody'>
                             </tbody>
                         </table>
                     </div>
                 </div>
             </div>
         </div>
+        <br>
         <div class="card">
             <div class="card-header">
-                <h5>Add Empolyee</h5>
+                <h5 id='add-employee'>Empolyee Form</h5>
             </div>
             <div class="card-body">
                 <h5 class="card-title"></h5>
                 <form>
                     <div class="form-group">
                         <label for="employeename">Employee Name</label>
-                        <input type="employee" class="form-control" id="employeeNameInput" placeholder="John Doe">
+                        <input type="employee" class="form-control" id="fullName" placeholder="John Doe">
                         <br>
                         <label for="inputRole">Role</label>
-                        <input type="role" class="form-control" id="inputRole" placeholder="CEO">
-                    </div>
-                    <div class="form-group">
+                        <input type="role" class="form-control" id="role" placeholder="CEO">
+                        <br>
                         <label for="inputStartDate">Start Date MM/DD/YYYY</label>
-                        <input type="role" class="form-control" id="inputStartDate" placeholder="01/08/1989">
+                        <input type="role" class="form-control" id="startDate" placeholder="01/08/1989">
+                        <br>
+                        <label for="payRate">Monthly Rate</label>
+                        <input type="role" class="form-control" id="payRate" placeholder="$500">
+                        <br>
                     </div>
-                    <button type="submit" class="submitbttn">Submit</button>
+                    <button type="submit" class="btn submitbttn">Submit</button>
+                    <div id=“errors”></div>
                 </form>
             </div>
+
+            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+                integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+                crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+                integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+                crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+                integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+                crossorigin="anonymous"></script>
             <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase.js"></script>
 </body>
+
 </html>
