--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
                 integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
                 crossorigin="anonymous"></script>
             <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase.js"></script>
+            <script src='js/moment.js'></script>
+            <script src='js/app.js'></script>
 </body>
 
 </html>
