--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <h5 class="card-title" id='add-employee'>Empolyee Form</h5>
             </div>
             <div class="card-body"> 
-                <div id="er" class="alert alert-primary alert-dismissible fade show" role="alert">
+                <div class="alert alert-danger alert-dismissible fade show" role="alert">
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                         <span class="sr-only">Close</span>
@@ -67,23 +67,23 @@
                 </div>
                 <div class="col">
                     <div class="form-group">
-                        <label for="employeename">Employee Name</label>
+                        <label for="employeename">Employee Name *</label>
                         <input type="employee" class="form-control" id="fullName" placeholder="John Doe">
                     </div>
                     <div class="form-group">
-                        <label for="inputRole">Role</label>
+                        <label for="inputRole">Role *</label>
                         <input type="role" class="form-control" id="role" placeholder="CEO">
                     </div>
                     <div class="form-group">
-                        <label for="inputStartDate">Start Date MM/DD/YYYY</label>
+                        <label for="inputStartDate">Start Date MM/DD/YYYY *</label>
                         <input type="role" class="form-control" id="startDate" placeholder="01/08/1989">
                     </div>
                     <div class="form-group">
-                        <label for="payRate">Monthly Rate</label>
+                        <label for="payRate">Monthly Rate * (Digits Only 12345)</label>
                         <input type="role" class="form-control" id="payRate" placeholder="$500">
                     </div>
                 
-                    <button type="submit" class="btn submitbttn">Submit</button>
+                    <button type="submit" class="btn submitbttn">Add</button>
                 </div> 
                
             </div>
